# mathplot

./: .gitignore  CMakeLists.txt  README.build.linux.md  README.build.windows.md  README.md
.github/workflows/: cmake-ubuntu-template.yml
examples/: CMakeLists.txt  anneal_asa.cpp  bootstrap.cpp  cartgrid.cpp  cartgrid_colourbar_repeat.cpp  colourbar.cpp  colourbar_interactive.cpp  colourmap_browser.cpp  colourmap_test.cpp  colourmaps_cet.cpp  colourmaps_crameri.cpp  colourmaps_desaturating.cpp  colourmaps_hsv1d.cpp  colourmaps_lenthe.cpp  colourmaps_matplotlib.cpp  colourmaps_mono.cpp  colourmaps_other.cpp  cone.cpp  convolve.cpp  convolve_rect.cpp  curvytelly.cpp  curvytelly_chequered_pipe.cpp  curvytelly_pipe.cpp  cyclic_colour.cpp  draw_triangles.cpp  duochrome.cpp  fps.cpp  geodesic.cpp  geodesic_ce.cpp  graph1.cpp  graph1_nomx.cpp  graph_bar.cpp  graph_change_xaxis.cpp  graph_coords.cpp  graph_dynamic_sine.cpp  graph_dynamic_sine_rescale.cpp  graph_dynamic_x2.cpp  graph_fouraxes.cpp  graph_histo.cpp  graph_incoming_data.cpp  (+79 more)
examples/docs/: graph_line.cpp
examples/gl_compute/: shader_naive_scan_cli.cpp  shader_ssbo.cpp
examples/pi/: convolve.cpp  graph1.cpp  hexgrid.cpp
examples/qt/fps/: mainwindow.cpp  mainwindow.h
examples/qt/graph1/: main.cpp  main_mx.cpp
examples/qt/hexgrid/: mainwindow.cpp  mainwindow.h
examples/wx/: wx-graph1.cpp  wx-graph6.cpp  wx-triaxes.cpp
morph/: Anneal.h  BezCurve.h  CMakeLists.txt  CartGrid.h  CartGridVisual.h  ColourBarVisual.h  ColourMap.h  ConeVisual.h  Config.h  CoordArrows.h  CurvyTellyVisual.h  CyclicColourVisual.h  DatasetStyle.h  DirichDom.h  DirichVtx.h  GeodesicVisual.h  GeodesicVisualCE.h  GraphVisual.h  GratingVisual.h  GridFeatures.h  GridVisual.h  HSVWheelVisual.h  HealpixVisual.h  HexGridVisual.h  IcosaVisual.h  Mnist.h  NM_Simplex.h  PointRowsMeshVisual.h  PointRowsVisual.h  PolygonVisual.h  QuadsMeshVisual.h  QuadsVisual.h  QuiverVisual.h  ReadCurves.h  RectangleVisual.h  RhomboVisual.h  RingVisual.h  RodVisual.h  ScatterVisual.h  ShapeAnalysis.h  (+21 more)
morph/jcvoronoi/: jc_voronoi.h
mplot/: Anneal.h  CMakeLists.txt  CartGridVisual.h  ColourBarVisual.h  ColourMap.h  ConeVisual.h  Config.h  ConfigVisual.h  CoordArrows.h  CyclicColourVisual.h  DirichDom.h  DirichVtx.h  GeodesicVisual.h  GeodesicVisualCE.h  GraphVisual.h  GratingVisual.h  GridVisual.h  HSVWheelVisual.h  HealpixVisual.h  HexGridVisual.h  IcosaVisual.h  LengthscaleVisual.h  Mnist.h  PointRowsMeshVisual.h  PointRowsVisual.h  PolarVisual.h  PolygonVisual.h  Process.h  QuadsMeshVisual.h  QuadsVisual.h  QuiverVisual.h  ReadCurves.h  RectangleVisual.h  RhomboVisual.h  RodVisual.h  ScatterVisual.h  ShapeAnalysis.h  SphereVisual.h  TriFrameVisual.h  TriangleVisual.h  (+29 more)
mplot/compoundray/: CMakeLists.txt  EyeVisual.h  Visual.h  interop.h
mplot/gl/: compute_manager.h  compute_manager_cli.h  compute_shaderprog.h  shaders.h  ssbo.h  texture.h  util_mx.h  util_nomx.h
mplot/qt/: viswidget.h
tests/: CMakeLists.txt  testColourMap.cpp  testConfig.cpp  testDirichlet.cpp  testDirichlet2.cpp  testDirichlet4.cpp  testDirichlet5.cpp  testProcess.cpp  testVisRemoveModel.cpp  test_circleboundary.cpp  test_ellipseboundary.cpp  testbezderiv3.cpp  testbighexgrid.cpp  testgraphnumberformat.cpp  testhexgrid3.cpp  testhexgridsave.cpp  testloadpng.cpp  testmakeformatticks.cpp  testmaketicks.cpp  testreadcurves.cpp  testreadcurves_circles.cpp  testrgbhsv.cpp
